<resources>
    <string name="app_name">MD Parcel Demo</string>

    <string name="parcel_info_title">Parcel Info</string>
    <string name="parcel_retrieved_measurements_title">Measurements</string>

    <string name="parcel_id_title">ID</string>
    <string name="parcel_id_subtitle">Scan Barcode</string>

    <string name="dimensioning_date_hint">Date</string>
    <string name="dimensioning_time_hint">Time</string>

    <string name="generic_height_measurement">Height: %s cm</string>
    <string name="generic_length_measurement">Length: %s cm</string>
    <string name="generic_width_measurement">Width: %s cm</string>

    <string name="dimensioning_size_hint">Size</string>
    <string name="parcel_length_hint">Length</string>
    <string name="parcel_width_hint">Width</string>
    <string name="parcel_height_hint">Height</string>
    <string name="parcel_weight_hint">Weight</string>

    <string name="parcel_notes_hint">Notes</string>

    <string name="get_dimensions_button_title">Get Dimensions</string>
    <string name="save_image_button_title">Save Captured Image</string>
    <string name="confirm_button_title">Confirm</string>

    <string name="error_validation_message">Please fill up all the required information</string>
    <string name="success_writing_message">Parcel information successfully saved!</string>
    <string name="error_writing_message">Error while saving parcel information, check logs!</string>

    <string name="dimensioning_save_captured_image_null">No captured image to save</string>
    <string name="dimensioning_save_captured_image_success">Image successfully saved</string>
    <string name="dimensioning_save_captured_image_failed">Failed to save the captured image</string>
</resources>